--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dialoger: ^1.0.0
   padded: ^1.0.1
   snackbar: ^1.0.2
+  get: ^4.6.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
