--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   sliver_tools: ^0.2.9
   toxic: ^1.0.3
   memcached: ^1.0.2
+  blur: ^3.1.0
+  shimmer: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
