--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "ars_cognitio",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "No more puffed up subscriptions. Connect your cloud keys directly to your phone and move on!",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
