--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,5 +47,23 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.1
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.13.0
 flutter:
   uses-material-design: true
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  ios: true
+  web:
+    generate: true
+    image_path: "images/glyph.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "images/circle.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "images/circle.png"
