--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   memcached: ^1.0.2
   blur: ^3.1.0
   shimmer: ^2.0.0
+  flutter_chat_types: ^3.6.0
+  flutter_gpt_tokenizer: ^0.1.0
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
