--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   synchronized: ^3.0.1
   path_provider: ^2.0.14
   uuid: ^3.0.7
+  just_audio: ^0.9.32
   flutter_markdown: ^0.6.14
   flutter_chat_ui: ^1.6.6
   foil: ^0.9.0+1
