--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,56 +3,42 @@ description: No more puffed up subscriptions. Connect your cloud keys directly t
 publish_to: 'none'
 version: 1.0.0+1
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
-  googleapis: ^10.1.0
   dart_openai: ^1.9.1
-  macos_ui: ^1.12.2
-  fluent_ui: ^4.4.2
-  fluentui_system_icons: ^1.1.198
-  universal_io: ^2.2.0
   fast_log: ^1.0.2
   precision_stopwatch: ^1.0.2
-  glitcheffect: ^1.1.1
   hive_flutter: ^1.1.0
-  googleapis_auth: ^1.4.0
-  http: ^0.13.5
-  lzstring: ^2.0.0+2
   json_serializable: ^6.6.1
   json_annotation: ^4.8.0
   hive: ^2.2.3
   synchronized: ^3.0.1
   path_provider: ^2.0.14
   uuid: ^3.0.7
-  just_audio: ^0.9.32
   flutter_markdown: ^0.6.14
   flutter_chat_ui: ^1.6.6
-  foil: ^0.9.0+1
-  settings_ui: ^2.0.2
   tinycolor2: ^3.0.1
   dialoger: ^1.0.0
   padded: ^1.0.1
-  snackbar: ^1.0.2
   get: ^4.6.5
-  file_picker: ^5.2.7
-  sliver_tools: ^0.2.9
-  toxic: ^1.0.3
-  memcached: ^1.0.2
-  blur: ^3.1.0
   shimmer: ^2.0.0
   flutter_chat_types: ^3.6.0
   tiktoken: ^1.0.3
   intl: ^0.17.0
-  base64_audio_source: ^1.0.1
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  dependency_validator: ^3.2.2
   flutter_lints: ^2.0.1
   build_runner: ^2.3.3
   flutter_launcher_icons: ^0.13.0
+scripts:
+  measure_android_size: flutter build apk --analyze-size --target-platform android-arm64
+  measure_ios_size: flutter build ios --analyze-size
+  upgrade_packages: |
+    flutter pub upgrade --major-versions --precompile
+    flutter pub outdated
+  validate_dependencies: flutter pub get && flutter pub outdated --transitive && flutter pub run dependency_validator
 flutter:
   uses-material-design: true
 flutter_icons:
